binread/tests/errors/conflicting_keyword_bool.stderr
error: conflicting `ignore` keyword
 --> $DIR/conflicting_keyword_bool.rs:5:18
  |
5 |     #[br(ignore, ignore)]
  |                  ^^^^^^
